fix: action buttons behind header

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -194,7 +194,7 @@
     padding: 16px 16px 0;
     box-shadow: inset 0 1px 0 0 var(--border-default-grey),
       inset 0 -1px 0 0 var(--border-default-grey);
-    z-index: calc(var(--ground) + 10000);
+    z-index: calc(var(--ground) + 100);
   }
 }
 
